--- a/BookOrca.ApiAccess/BookOrca.ApiAccess.csproj
+++ b/BookOrca.ApiAccess/BookOrca.ApiAccess.csproj
@@ -10,4 +10,8 @@
         <ProjectReference Include="..\BookOrca.Models\BookOrca.Models.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    </ItemGroup>
+
 </Project>
