--- a/Test/BookOrca.ApiAccess.Test/BookOrca.ApiAccess.Test.csproj
+++ b/Test/BookOrca.ApiAccess.Test/BookOrca.ApiAccess.Test.csproj
@@ -16,4 +16,8 @@
         <PackageReference Include="coverlet.collector" Version="3.1.2"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\BookOrca.ApiAccess\BookOrca.ApiAccess.csproj" />
+    </ItemGroup>
+
 </Project>
