--- a/BookOrca.DataAccess/BookOrca.DataAccess.csproj
+++ b/BookOrca.DataAccess/BookOrca.DataAccess.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\BookOrca.Models\BookOrca.Models.csproj"/>
+        <ProjectReference Include="..\BookOrca.Resources\BookOrca.Resources.csproj" />
     </ItemGroup>
 
 </Project>
