--- a/BookOrca/BookOrca.csproj
+++ b/BookOrca/BookOrca.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
         <Folder Include="Core\Dispatch\" />
+        <Folder Include="Resources\" />
     </ItemGroup>
 
     <ItemGroup>
@@ -29,6 +30,10 @@
       <None Update="App.config">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Resource Include="Resources\Images\NoImage.png" />
     </ItemGroup>
 
 </Project>
